# big_vision

./: .gitignore  README.md  pyproject.toml
big_vision/: input_pipeline.py  requirements.txt  utils.py
big_vision/models/: vit.py
scripts/: 20240327_inspect_bigvision_optimizer.ipynb  20240328_model_sharding.ipynb  20240329_siglip_checkpoint_loading.ipynb  20240407_model_sharding.ipynb  20240525_coca_tokenization.ipynb  20240601_open_clip_coca_masking.ipynb  20240609_coca_masking_experiment.ipynb  20240610_coca_masking_experiment.ipynb  20240613_inspect_caltech101.ipynb  20240616_loading_bigvision_ckpt.py  20240619_inspect_cc12m.ipynb  20240624_any_bigvision_lit.ipynb  20240624_any_bv_vit_to_open_clip.ipynb  20240624_bv2oc_vit_conversion.ipynb  20240716_causal_masking_flops_inspection.ipynb  20240813_gemma2b_conversion.ipynb  20240821_gemma2b_first_N_layer_conversion.ipynb  20240821_gemma2b_first_half.ipynb  20240822_plotting_curves.ipynb  20240828_winoground.ipynb  20240909_beit_initialization_and_drop_path.ipynb  20240911_beit_initialization_confirmation.ipynb  20240914_drop_path_for_scan.py  20240914_modify_intern_vit.sh  20240916_drop_path.ipynb  20240923_datacomp_recap.ipynb  20240923_datacomp_recap_construction.ipynb  20240924_datacomp_recap_construction.py  20240925_datacomp_recap_hyper_script.sh  20241002_chartqa_inspection.ipynb  20241003_plotting_FT_bars.ipynb  20241003_plotting_bars.ipynb  20241010_dinov2_conversion.ipynb  20241010_dinov2_conversion.py  20241012_cambrian10M_tfds.ipynb  20241012_cambrian_dataset.ipynb  20241012_cambrian_dataset_construction.py  (+11 more)
(+53 files in other folders)
